# graphic_graphic_3d

./: .gitignore  BACKEND_COMPATIBILITY_VALIDATION.md  INTEGRATION_SUMMARY.md  SPATIAL_GPU_UPSCALING_DESIGN.md  spatial_upscaling_example_config.json
docs/: environment_alpha_examples.js  environment_alpha_transparency.md  solution_summary_zh.md
examples/: README.md  simple_wireframe_demo.js  test_wireframe.js  wireframe_bounding_box.js
kits/js/include/: EnvironmentJS.h  SceneJS.h
kits/js/include/geometry_definition/: CustomJS.h
kits/js/src/: EnvironmentJS.cpp  SceneJS.cpp
kits/js/src/geometry_definition/: CustomJS.cpp
lume/LumeRender/: BUILD.gn
lume/LumeRender/assets/render/shaders/common/: sr_common.h
lume/LumeRender/assets/render/shaders/computeshader/: sr_edge_detection.comp  sr_output.comp  sr_sharpening.comp  sr_spatial_upscale.comp
lume/LumeRender/src/: render_context.h
lume/LumeRender/src/node/: core_render_node_factory.cpp  render_node_sr.cpp  render_node_sr.h
lume/LumeRender/src/postprocesses/: render_post_process_sr.cpp  render_post_process_sr.h  render_post_process_sr_node.cpp  render_post_process_sr_node.h
lume/LumeScene/include/scene/interface/: intf_environment.h
lume/Lume_3D/: README.md
lume/Lume_3D/api/3d/render/: default_material_constants.h  render_data_defines_3d.h
lume/Lume_3D/api/3d/shaders/common/: 3d_dm_indirect_lighting_common.h  3d_dm_inplace_env_common.h  3d_dm_structures_common.h
lume/Lume_3D/assets/3d/shaders/shader/: core3d_dm_env_alpha.frag  core3d_dm_env_alpha.shader
lume/Lume_3D/docs/: LIGHT_FORWARD_POST_PROCESSING.md  LIGHT_FORWARD_POST_PROCESSING_zh.md  LIGHT_FORWARD_QUICK_START.md  LIGHT_FORWARD_QUICK_START_zh.md
lume/Lume_3D/src/ecs/systems/: render_system.cpp
lume/Lume_3D/src/render/node/: render_node_default_camera_controller.cpp  render_node_default_camera_controller.h
